k8s/apps/tech/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tech
  namespace: apps
spec:
  selector:
    app: tech
  ports:
    - port: 80
      targetPort: 80
