k8s/apps/tech/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tech
  namespace: apps
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`tech.tugy.org`) || Host(`tech.tugy.dev`)
      kind: Rule
      services:
        - name: tech
          port: 80
