k8s/apps/tech/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tech
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app: tech
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
